jsDASM/preprocessor.js
preprocessor = (function(){
  /* Generated by PEG.js 0.6.2 (http://pegjs.majda.cz/). */
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "_": parse__,
        "address": parse_address,
        "anyCharacter": parse_anyCharacter,
        "braced": parse_braced,
        "bracketed": parse_bracketed,
        "dasm": parse_dasm,
        "defmacro": parse_defmacro,
        "instr1": parse_instr1,
        "instr2": parse_instr2,
        "label": parse_label,
        "lineComment": parse_lineComment,
        "lineTerminator": parse_lineTerminator,
        "literal": parse_literal,
        "macrobody": parse_macrobody,
        "macrocall": parse_macrocall,
        "nonBraceCharacter": parse_nonBraceCharacter,
        "nonBracketCharacter": parse_nonBracketCharacter,
        "op1": parse_op1,
        "op2": parse_op2,
        "operand": parse_operand,
        "other": parse_other,
        "special": parse_special,
        "symbol": parse_symbol,
        "whiteSpace": parse_whiteSpace
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "dasm";
      }
      
      var pos = 0;
      var reportMatchFailures = true;
      var rightmostMatchFailuresPos = 0;
      var rightmostMatchFailuresExpected = [];
      var cache = {};
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        
        if (charCode <= 0xFF) {
          var escapeChar = 'x';
          var length = 2;
        } else {
          var escapeChar = 'u';
          var length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function quote(s) {
        /*
         * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
         * string literal except for the closing quote character, backslash,
         * carriage return, line separator, paragraph separator, and line feed.
         * Any character may appear in the form of an escape sequence.
         */
        return '"' + s
          .replace(/\\/g, '\\\\')            // backslash
          .replace(/"/g, '\\"')              // closing quote character
          .replace(/\r/g, '\\r')             // carriage return
          .replace(/\n/g, '\\n')             // line feed
          .replace(/[\x80-\uFFFF]/g, escape) // non-ASCII characters
          + '"';
      }
      
      function matchFailed(failure) {
        if (pos < rightmostMatchFailuresPos) {
          return;
        }
        
        if (pos > rightmostMatchFailuresPos) {
          rightmostMatchFailuresPos = pos;
          rightmostMatchFailuresExpected = [];
        }
        
        rightmostMatchFailuresExpected.push(failure);
      }
      
      function parse_dasm() {
        var cacheKey = 'dasm@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var result8 = parse_op2();
        if (result8 !== null) {
          var result3 = result8;
        } else {
          var result7 = parse_op1();
          if (result7 !== null) {
            var result3 = result7;
          } else {
            var result6 = parse_label();
            if (result6 !== null) {
              var result3 = result6;
            } else {
              var result5 = parse_defmacro();
              if (result5 !== null) {
                var result3 = result5;
              } else {
                var result4 = parse_macrocall();
                if (result4 !== null) {
                  var result3 = result4;
                } else {
                  var result3 = null;;
                };
              };
            };
          };
        }
        if (result3 !== null) {
          var result1 = [];
          while (result3 !== null) {
            result1.push(result3);
            var result8 = parse_op2();
            if (result8 !== null) {
              var result3 = result8;
            } else {
              var result7 = parse_op1();
              if (result7 !== null) {
                var result3 = result7;
              } else {
                var result6 = parse_label();
                if (result6 !== null) {
                  var result3 = result6;
                } else {
                  var result5 = parse_defmacro();
                  if (result5 !== null) {
                    var result3 = result5;
                  } else {
                    var result4 = parse_macrocall();
                    if (result4 !== null) {
                      var result3 = result4;
                    } else {
                      var result3 = null;;
                    };
                  };
                };
              };
            }
          }
        } else {
          var result1 = null;
        }
        var result2 = result1 !== null
          ? (function(lines) {
          	return lines.join("");
              })(result1)
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_op2() {
        var cacheKey = 'op2@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        var result3 = parse__();
        if (result3 !== null) {
          var result4 = parse_instr2();
          if (result4 !== null) {
            var result5 = parse__();
            if (result5 !== null) {
              var result6 = parse_operand();
              if (result6 !== null) {
                var result7 = parse__();
                if (result7 !== null) {
                  if (input.substr(pos, 1) === ",") {
                    var result8 = ",";
                    pos += 1;
                  } else {
                    var result8 = null;
                    if (reportMatchFailures) {
                      matchFailed("\",\"");
                    }
                  }
                  if (result8 !== null) {
                    var result9 = parse__();
                    if (result9 !== null) {
                      var result10 = parse_operand();
                      if (result10 !== null) {
                        var result11 = parse__();
                        if (result11 !== null) {
                          var result1 = [result3, result4, result5, result6, result7, result8, result9, result10, result11];
                        } else {
                          var result1 = null;
                          pos = savedPos1;
                        }
                      } else {
                        var result1 = null;
                        pos = savedPos1;
                      }
                    } else {
                      var result1 = null;
                      pos = savedPos1;
                    }
                  } else {
                    var result1 = null;
                    pos = savedPos1;
                  }
                } else {
                  var result1 = null;
                  pos = savedPos1;
                }
              } else {
                var result1 = null;
                pos = savedPos1;
              }
            } else {
              var result1 = null;
              pos = savedPos1;
            }
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(instr, op1, op2) {return instr.toLowerCase() + " " + op1 + ", " + op2 + "\n"})(result1[1], result1[3], result1[7])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_op1() {
        var cacheKey = 'op1@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        var result3 = parse__();
        if (result3 !== null) {
          var result4 = parse_instr1();
          if (result4 !== null) {
            var result5 = parse__();
            if (result5 !== null) {
              var result6 = parse_operand();
              if (result6 !== null) {
                var result7 = parse__();
                if (result7 !== null) {
                  var result1 = [result3, result4, result5, result6, result7];
                } else {
                  var result1 = null;
                  pos = savedPos1;
                }
              } else {
                var result1 = null;
                pos = savedPos1;
              }
            } else {
              var result1 = null;
              pos = savedPos1;
            }
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(instr, op) {return instr.toLowerCase() + " " + op + "\n";})(result1[1], result1[3])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_label() {
        var cacheKey = 'label@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        var result3 = parse__();
        if (result3 !== null) {
          if (input.substr(pos, 1) === ":") {
            var result4 = ":";
            pos += 1;
          } else {
            var result4 = null;
            if (reportMatchFailures) {
              matchFailed("\":\"");
            }
          }
          if (result4 !== null) {
            var result5 = parse_symbol();
            if (result5 !== null) {
              var result6 = parse__();
              if (result6 !== null) {
                var result1 = [result3, result4, result5, result6];
              } else {
                var result1 = null;
                pos = savedPos1;
              }
            } else {
              var result1 = null;
              pos = savedPos1;
            }
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(symbol) { console.log("label",symbol); return ":" + symbol + "\n";})(result1[2])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_braced() {
        var cacheKey = 'braced@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        if (input.substr(pos, 1) === "{") {
          var result3 = "{";
          pos += 1;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("\"{\"");
          }
        }
        if (result3 !== null) {
          var result4 = [];
          var result8 = parse_braced();
          if (result8 !== null) {
            var result6 = result8;
          } else {
            var result7 = parse_nonBraceCharacter();
            if (result7 !== null) {
              var result6 = result7;
            } else {
              var result6 = null;;
            };
          }
          while (result6 !== null) {
            result4.push(result6);
            var result8 = parse_braced();
            if (result8 !== null) {
              var result6 = result8;
            } else {
              var result7 = parse_nonBraceCharacter();
              if (result7 !== null) {
                var result6 = result7;
              } else {
                var result6 = null;;
              };
            }
          }
          if (result4 !== null) {
            if (input.substr(pos, 1) === "}") {
              var result5 = "}";
              pos += 1;
            } else {
              var result5 = null;
              if (reportMatchFailures) {
                matchFailed("\"}\"");
              }
            }
            if (result5 !== null) {
              var result1 = [result3, result4, result5];
            } else {
              var result1 = null;
              pos = savedPos1;
            }
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(parts) {
          	return parts.join("");
              })(result1[1])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_nonBraceCharacter() {
        var cacheKey = 'nonBraceCharacter@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        if (input.substr(pos).match(/^[^{}]/) !== null) {
          var result0 = input.charAt(pos);
          pos++;
        } else {
          var result0 = null;
          if (reportMatchFailures) {
            matchFailed("[^{}]");
          }
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_bracketed() {
        var cacheKey = 'bracketed@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        if (input.substr(pos, 1) === "[") {
          var result3 = "[";
          pos += 1;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("\"[\"");
          }
        }
        if (result3 !== null) {
          var result4 = [];
          var result8 = parse_braced();
          if (result8 !== null) {
            var result6 = result8;
          } else {
            var result7 = parse_nonBracketCharacter();
            if (result7 !== null) {
              var result6 = result7;
            } else {
              var result6 = null;;
            };
          }
          while (result6 !== null) {
            result4.push(result6);
            var result8 = parse_braced();
            if (result8 !== null) {
              var result6 = result8;
            } else {
              var result7 = parse_nonBracketCharacter();
              if (result7 !== null) {
                var result6 = result7;
              } else {
                var result6 = null;;
              };
            }
          }
          if (result4 !== null) {
            if (input.substr(pos, 1) === "]") {
              var result5 = "]";
              pos += 1;
            } else {
              var result5 = null;
              if (reportMatchFailures) {
                matchFailed("\"]\"");
              }
            }
            if (result5 !== null) {
              var result1 = [result3, result4, result5];
            } else {
              var result1 = null;
              pos = savedPos1;
            }
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(parts) {
          	return parts.join("");
              })(result1[1])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_nonBracketCharacter() {
        var cacheKey = 'nonBracketCharacter@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        if (input.substr(pos).match(/^[^[\]]/) !== null) {
          var result0 = input.charAt(pos);
          pos++;
        } else {
          var result0 = null;
          if (reportMatchFailures) {
            matchFailed("[^[\\]]");
          }
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_defmacro() {
        var cacheKey = 'defmacro@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        var result3 = parse__();
        if (result3 !== null) {
          if (input.substr(pos, 9) === "#defmacro") {
            var result4 = "#defmacro";
            pos += 9;
          } else {
            var result4 = null;
            if (reportMatchFailures) {
              matchFailed("\"#defmacro\"");
            }
          }
          if (result4 !== null) {
            var result5 = parse__();
            if (result5 !== null) {
              var result6 = parse_symbol();
              if (result6 !== null) {
                var result7 = parse__();
                if (result7 !== null) {
                  if (input.substr(pos, 1) === "(") {
                    var result8 = "(";
                    pos += 1;
                  } else {
                    var result8 = null;
                    if (reportMatchFailures) {
                      matchFailed("\"(\"");
                    }
                  }
                  if (result8 !== null) {
                    var result9 = parse__();
                    if (result9 !== null) {
                      var result10 = [];
                      var savedPos2 = pos;
                      var result19 = parse_symbol();
                      if (result19 !== null) {
                        var result20 = parse__();
                        if (result20 !== null) {
                          var result18 = [result19, result20];
                        } else {
                          var result18 = null;
                          pos = savedPos2;
                        }
                      } else {
                        var result18 = null;
                        pos = savedPos2;
                      }
                      while (result18 !== null) {
                        result10.push(result18);
                        var savedPos2 = pos;
                        var result19 = parse_symbol();
                        if (result19 !== null) {
                          var result20 = parse__();
                          if (result20 !== null) {
                            var result18 = [result19, result20];
                          } else {
                            var result18 = null;
                            pos = savedPos2;
                          }
                        } else {
                          var result18 = null;
                          pos = savedPos2;
                        }
                      }
                      if (result10 !== null) {
                        if (input.substr(pos, 1) === ")") {
                          var result11 = ")";
                          pos += 1;
                        } else {
                          var result11 = null;
                          if (reportMatchFailures) {
                            matchFailed("\")\"");
                          }
                        }
                        if (result11 !== null) {
                          var result12 = parse__();
                          if (result12 !== null) {
                            var result13 = parse_braced();
                            if (result13 !== null) {
                              var result14 = parse__();
                              if (result14 !== null) {
                                var result17 = parse_bracketed();
                                var result15 = result17 !== null ? result17 : '';
                                if (result15 !== null) {
                                  var result16 = parse__();
                                  if (result16 !== null) {
                                    var result1 = [result3, result4, result5, result6, result7, result8, result9, result10, result11, result12, result13, result14, result15, result16];
                                  } else {
                                    var result1 = null;
                                    pos = savedPos1;
                                  }
                                } else {
                                  var result1 = null;
                                  pos = savedPos1;
                                }
                              } else {
                                var result1 = null;
                                pos = savedPos1;
                              }
                            } else {
                              var result1 = null;
                              pos = savedPos1;
                            }
                          } else {
                            var result1 = null;
                            pos = savedPos1;
                          }
                        } else {
                          var result1 = null;
                          pos = savedPos1;
                        }
                      } else {
                        var result1 = null;
                        pos = savedPos1;
                      }
                    } else {
                      var result1 = null;
                      pos = savedPos1;
                    }
                  } else {
                    var result1 = null;
                    pos = savedPos1;
                  }
                } else {
                  var result1 = null;
                  pos = savedPos1;
                }
              } else {
                var result1 = null;
                pos = savedPos1;
              }
            } else {
              var result1 = null;
              pos = savedPos1;
            }
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(name, paramlist, body, env) {
          	console.log("macro!");
          	console.log("name:", name,"params", paramlist, "body", body);
          	var paramstr = "";
          	for (i in paramlist) {
          	    if (i > 0) {
          		paramstr += ", ";
          	    }
          	    paramstr += paramlist[i][0];
          	}
          	var macrodef = "";
          	if (env != undefined) {
          	    macrodef += env;
          	}
          	macrodef += "macros[\"" + name + "\"] = function (" + paramstr + ") {";
          	macrodef += body
          	macrodef += "}";
                  console.log("macrodef:",macrodef);
                  console.log("env:",env);
          	eval(macrodef);
          	return "";
          })(result1[3], result1[7], result1[10], result1[12])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_macrobody() {
        var cacheKey = 'macrobody@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var result1 = [];
        if (input.substr(pos).match(/^[^\]]/) !== null) {
          var result3 = input.charAt(pos);
          pos++;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("[^\\]]");
          }
        }
        while (result3 !== null) {
          result1.push(result3);
          if (input.substr(pos).match(/^[^\]]/) !== null) {
            var result3 = input.charAt(pos);
            pos++;
          } else {
            var result3 = null;
            if (reportMatchFailures) {
              matchFailed("[^\\]]");
            }
          }
        }
        var result2 = result1 !== null
          ? (function(macrobody) { return macrobody.join(""); })(result1)
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_macrocall() {
        var cacheKey = 'macrocall@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        var result3 = parse__();
        if (result3 !== null) {
          var result4 = parse_symbol();
          if (result4 !== null) {
            var result5 = parse__();
            if (result5 !== null) {
              if (input.substr(pos, 1) === "(") {
                var result6 = "(";
                pos += 1;
              } else {
                var result6 = null;
                if (reportMatchFailures) {
                  matchFailed("\"(\"");
                }
              }
              if (result6 !== null) {
                var result7 = parse__();
                if (result7 !== null) {
                  var result8 = [];
                  if (input.substr(pos).match(/^[^)]/) !== null) {
                    var result12 = input.charAt(pos);
                    pos++;
                  } else {
                    var result12 = null;
                    if (reportMatchFailures) {
                      matchFailed("[^)]");
                    }
                  }
                  while (result12 !== null) {
                    result8.push(result12);
                    if (input.substr(pos).match(/^[^)]/) !== null) {
                      var result12 = input.charAt(pos);
                      pos++;
                    } else {
                      var result12 = null;
                      if (reportMatchFailures) {
                        matchFailed("[^)]");
                      }
                    }
                  }
                  if (result8 !== null) {
                    var result9 = parse__();
                    if (result9 !== null) {
                      if (input.substr(pos, 1) === ")") {
                        var result10 = ")";
                        pos += 1;
                      } else {
                        var result10 = null;
                        if (reportMatchFailures) {
                          matchFailed("\")\"");
                        }
                      }
                      if (result10 !== null) {
                        var result11 = parse__();
                        if (result11 !== null) {
                          var result1 = [result3, result4, result5, result6, result7, result8, result9, result10, result11];
                        } else {
                          var result1 = null;
                          pos = savedPos1;
                        }
                      } else {
                        var result1 = null;
                        pos = savedPos1;
                      }
                    } else {
                      var result1 = null;
                      pos = savedPos1;
                    }
                  } else {
                    var result1 = null;
                    pos = savedPos1;
                  }
                } else {
                  var result1 = null;
                  pos = savedPos1;
                }
              } else {
                var result1 = null;
                pos = savedPos1;
              }
            } else {
              var result1 = null;
              pos = savedPos1;
            }
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(name, params) {
          	
          	return eval ("macros[\"" + name + "\"](" + params.join("")+")");
              })(result1[1], result1[5])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_instr2() {
        var cacheKey = 'instr2@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        if (input.substr(pos, 3) === "set") {
          var result30 = "set";
          pos += 3;
        } else {
          var result30 = null;
          if (reportMatchFailures) {
            matchFailed("\"set\"");
          }
        }
        if (result30 !== null) {
          var result0 = result30;
        } else {
          if (input.substr(pos, 3) === "SET") {
            var result29 = "SET";
            pos += 3;
          } else {
            var result29 = null;
            if (reportMatchFailures) {
              matchFailed("\"SET\"");
            }
          }
          if (result29 !== null) {
            var result0 = result29;
          } else {
            if (input.substr(pos, 3) === "add") {
              var result28 = "add";
              pos += 3;
            } else {
              var result28 = null;
              if (reportMatchFailures) {
                matchFailed("\"add\"");
              }
            }
            if (result28 !== null) {
              var result0 = result28;
            } else {
              if (input.substr(pos, 3) === "ADD") {
                var result27 = "ADD";
                pos += 3;
              } else {
                var result27 = null;
                if (reportMatchFailures) {
                  matchFailed("\"ADD\"");
                }
              }
              if (result27 !== null) {
                var result0 = result27;
              } else {
                if (input.substr(pos, 3) === "sub") {
                  var result26 = "sub";
                  pos += 3;
                } else {
                  var result26 = null;
                  if (reportMatchFailures) {
                    matchFailed("\"sub\"");
                  }
                }
                if (result26 !== null) {
                  var result0 = result26;
                } else {
                  if (input.substr(pos, 3) === "SUB") {
                    var result25 = "SUB";
                    pos += 3;
                  } else {
                    var result25 = null;
                    if (reportMatchFailures) {
                      matchFailed("\"SUB\"");
                    }
                  }
                  if (result25 !== null) {
                    var result0 = result25;
                  } else {
                    if (input.substr(pos, 3) === "mul") {
                      var result24 = "mul";
                      pos += 3;
                    } else {
                      var result24 = null;
                      if (reportMatchFailures) {
                        matchFailed("\"mul\"");
                      }
                    }
                    if (result24 !== null) {
                      var result0 = result24;
                    } else {
                      if (input.substr(pos, 3) === "MUL") {
                        var result23 = "MUL";
                        pos += 3;
                      } else {
                        var result23 = null;
                        if (reportMatchFailures) {
                          matchFailed("\"MUL\"");
                        }
                      }
                      if (result23 !== null) {
                        var result0 = result23;
                      } else {
                        if (input.substr(pos, 3) === "div") {
                          var result22 = "div";
                          pos += 3;
                        } else {
                          var result22 = null;
                          if (reportMatchFailures) {
                            matchFailed("\"div\"");
                          }
                        }
                        if (result22 !== null) {
                          var result0 = result22;
                        } else {
                          if (input.substr(pos, 3) === "DIV") {
                            var result21 = "DIV";
                            pos += 3;
                          } else {
                            var result21 = null;
                            if (reportMatchFailures) {
                              matchFailed("\"DIV\"");
                            }
                          }
                          if (result21 !== null) {
                            var result0 = result21;
                          } else {
                            if (input.substr(pos, 3) === "mod") {
                              var result20 = "mod";
                              pos += 3;
                            } else {
                              var result20 = null;
                              if (reportMatchFailures) {
                                matchFailed("\"mod\"");
                              }
                            }
                            if (result20 !== null) {
                              var result0 = result20;
                            } else {
                              if (input.substr(pos, 3) === "MOD") {
                                var result19 = "MOD";
                                pos += 3;
                              } else {
                                var result19 = null;
                                if (reportMatchFailures) {
                                  matchFailed("\"MOD\"");
                                }
                              }
                              if (result19 !== null) {
                                var result0 = result19;
                              } else {
                                if (input.substr(pos, 3) === "shl") {
                                  var result18 = "shl";
                                  pos += 3;
                                } else {
                                  var result18 = null;
                                  if (reportMatchFailures) {
                                    matchFailed("\"shl\"");
                                  }
                                }
                                if (result18 !== null) {
                                  var result0 = result18;
                                } else {
                                  if (input.substr(pos, 3) === "SHL") {
                                    var result17 = "SHL";
                                    pos += 3;
                                  } else {
                                    var result17 = null;
                                    if (reportMatchFailures) {
                                      matchFailed("\"SHL\"");
                                    }
                                  }
                                  if (result17 !== null) {
                                    var result0 = result17;
                                  } else {
                                    if (input.substr(pos, 3) === "shr") {
                                      var result16 = "shr";
                                      pos += 3;
                                    } else {
                                      var result16 = null;
                                      if (reportMatchFailures) {
                                        matchFailed("\"shr\"");
                                      }
                                    }
                                    if (result16 !== null) {
                                      var result0 = result16;
                                    } else {
                                      if (input.substr(pos, 3) === "SHR") {
                                        var result15 = "SHR";
                                        pos += 3;
                                      } else {
                                        var result15 = null;
                                        if (reportMatchFailures) {
                                          matchFailed("\"SHR\"");
                                        }
                                      }
                                      if (result15 !== null) {
                                        var result0 = result15;
                                      } else {
                                        if (input.substr(pos, 3) === "and") {
                                          var result14 = "and";
                                          pos += 3;
                                        } else {
                                          var result14 = null;
                                          if (reportMatchFailures) {
                                            matchFailed("\"and\"");
                                          }
                                        }
                                        if (result14 !== null) {
                                          var result0 = result14;
                                        } else {
                                          if (input.substr(pos, 3) === "AND") {
                                            var result13 = "AND";
                                            pos += 3;
                                          } else {
                                            var result13 = null;
                                            if (reportMatchFailures) {
                                              matchFailed("\"AND\"");
                                            }
                                          }
                                          if (result13 !== null) {
                                            var result0 = result13;
                                          } else {
                                            if (input.substr(pos, 3) === "bor") {
                                              var result12 = "bor";
                                              pos += 3;
                                            } else {
                                              var result12 = null;
                                              if (reportMatchFailures) {
                                                matchFailed("\"bor\"");
                                              }
                                            }
                                            if (result12 !== null) {
                                              var result0 = result12;
                                            } else {
                                              if (input.substr(pos, 3) === "BOR") {
                                                var result11 = "BOR";
                                                pos += 3;
                                              } else {
                                                var result11 = null;
                                                if (reportMatchFailures) {
                                                  matchFailed("\"BOR\"");
                                                }
                                              }
                                              if (result11 !== null) {
                                                var result0 = result11;
                                              } else {
                                                if (input.substr(pos, 3) === "xor") {
                                                  var result10 = "xor";
                                                  pos += 3;
                                                } else {
                                                  var result10 = null;
                                                  if (reportMatchFailures) {
                                                    matchFailed("\"xor\"");
                                                  }
                                                }
                                                if (result10 !== null) {
                                                  var result0 = result10;
                                                } else {
                                                  if (input.substr(pos, 3) === "XOR") {
                                                    var result9 = "XOR";
                                                    pos += 3;
                                                  } else {
                                                    var result9 = null;
                                                    if (reportMatchFailures) {
                                                      matchFailed("\"XOR\"");
                                                    }
                                                  }
                                                  if (result9 !== null) {
                                                    var result0 = result9;
                                                  } else {
                                                    if (input.substr(pos, 3) === "ife") {
                                                      var result8 = "ife";
                                                      pos += 3;
                                                    } else {
                                                      var result8 = null;
                                                      if (reportMatchFailures) {
                                                        matchFailed("\"ife\"");
                                                      }
                                                    }
                                                    if (result8 !== null) {
                                                      var result0 = result8;
                                                    } else {
                                                      if (input.substr(pos, 3) === "IFE") {
                                                        var result7 = "IFE";
